<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GleanTime_dev</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!--  Menu String -->
	<string name="notice">Notice</string>
	<string name="message">Message</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	
	<!-- Login -->
	<string name="email_login">Email Login</string>
	<string name="email">Email</string>
	<string name="login">Login</string>
	<string name="sign_up">Sign Up</string>
	<string name="id">id</string>
	<string name="password">Password</string>
	<string name="confirm">Confirm</string>
	<string name="nickname">NickName</string>
	
	<!-- Login Fail -->
	<string name="login_failed">Authrize failed.. please check your ID or Password</string>
	<string name="email_invalid">Invalid email address</string>
	<string name="login_data_empty">Please insert Email and Password</string>
	<!-- SignUp Fail -->
	<string name="signup_data_empty">Please insert All data</string>
	<string name="password_not_match">Password confirm does not match</string>
</resources>
